[package]
name = "gh-auth"
version = "0.1.0"
authors = ["Vito Sartori <hey@vito.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.33"
rand = "0.8.3"
rand_chacha = "0.3.0"
base64 = "0.13.0"
clap = "2.33.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "1.1.1"
url = "2.2.1"
serde_json = "1.0.64"
hyper-tls = "0.5.0"
hyper-staticfile = "0.6.0"
